--- a/py11/CMakeLists.txt
+++ b/py11/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(/home/aaron/github/pybind11/include/)
+
 add_library( pydemo SHARED "Py11Demo.cpp" )
 set_property(TARGET pydemo PROPERTY POSITION_INDEPENDENT_CODE ON)
 SET_TARGET_PROPERTIES(pydemo PROPERTIES PREFIX "")
