--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [build-system]
 requires = [
-    "setuptools>=61",
+    "setuptools>=42",
     "wheel",
     "pybind11>=2.9.0",
+    "cmake>=3.12",
 ]
 
 build-backend = "setuptools.build_meta"
