--- a/py11/CMakeLists.txt
+++ b/py11/CMakeLists.txt
@@ -1,6 +1,2 @@
-include_directories(/home/aaron/github/pybind11/include/)
-
-add_library( pydemo SHARED "Py11Demo.cpp" )
-set_property(TARGET pydemo PROPERTY POSITION_INDEPENDENT_CODE ON)
-SET_TARGET_PROPERTIES(pydemo PROPERTIES PREFIX "")
-target_link_libraries( pydemo mathdummystatic mathdummydyn)
+pybind11_add_module(pydemo "Py11Demo.cpp")
+target_link_libraries( pydemo PRIVATE mathdummystatic mathdummydyn ${CMAKE_THREAD_LIBS_INIT})
